ayaiz changes to donation

--- a/donations.html
+++ b/donations.html
@@ -1,34 +1,125 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-    <link rel="stylesheet" href="don.css" type="text/css" />
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Donations and Volunteer Work</title>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="don.css" type="text/css" media="all" />
 </head>
 
 <body>
-    <div>
-        <a>Charitys</a>
-        <p>Volunteer</p>
-    </div>
-    <div>
-        <a>Places To Volunteer</a>
-        
-        <p>Make Donations</p>
-        <a href="https://lp.catholiccharities.us/reducingpoverty?gclid=Cj0KCQjwkt6aBhDKARIsAAyeLJ0pUxhuHIUA9fEE9B_KCae5K6Qx6Z_7AsPK2Sb9E-7CbWnr0MCa2EgaAl38EALw_wcB">Catholic Charities USA</a>
-        <br></br>
-        <a href="https://www.coalitionforthehomeless.org/donate/">Coalition for the Homeless</a>
-        <br></br>
-        <a href="https://www1.nyc.gov/site/dhs/about/donations.page">The Department of Homeless Services</a>
-        <br></br>
-        <a href="https://www.bowery.org/donate/form/?journitygroup=View+%24+Donor+Form&utm_source=google&utm_medium=cpc&utm_campaign=MW_TBM_116-46647_2210bwamb_20231002_2210BWAMB&utm_content=nil_nil_nil_nil&s_src=2210BWAMB&s_subsrc=SEM&mwm_id=617058305677&mwsc=TBM-116-2210BWAMB&gclid=Cj0KCQjwkt6aBhDKARIsAAyeLJ3r9S1cFKQ-z-Xc2DAXnwABRwaUn3eCJnLms8BjoOEXo3YxYYLdDNcaAjuzEALw_wcB">The Bowery Mission</a>
-        
-    </div>
-    <footer>
+    <!--<header>-->
 
-    </footer>
+    <!--</header>-->
+    <main>
+        <!--<nav class=“navbar navbar-expand-lg”>-->
+            <!--    <div class=“container-fluid”>-->
+            <!--        <a class=“navbar-brand” href=“#”>HELP HOMELESS NYC</a>-->
+            <!--        <button class=“navbar-toggler” type=“button” data-bs-toggle=“collapse” data-bs-target=“#navbarNavAltMarkup” aria-controls=“navbarNavAltMarkup” aria-expanded=“false” aria-label=“Toggle navigation”>-->
+            <!--            <span class=“navbar-toggler-icon”></span>-->
+            <!--        </button>-->
+            <!--        <div class=“collapse navbar-collapse” id=“navbarNavAltMarkup”>-->
+            <!--            <div class=“navbar-nav”>-->
+            <!--                <a class=“nav-link active” aria-current=“page” href=“#”>Home </a>-->
+            <!--                <a class=“nav-link” href=“#”> Need Help</a>-->
+            <!--                <a class=“nav-link” href=“#”>Get Involved</a>-->
+            <!--                <a class=“nav-link disabled”> About Us</a>-->
+            <!--            </div>-->
+            <!--        </div>-->
+            <!--    </div>-->
+            <!--</nav>-->
+        <div class="container-fluid py-2">
+            <h2 class="font-weight-light">Donate to Charity</h2>
+            <div class="d-flex flex-row flex-nowrap">
+                <div class="card card-body">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://assets.bowery.org/og_images/Logo_Default-Share-small.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">The Bower Mission</h5>
+                            <p class="card-text">The Bowery Mission is called to minister in the New York metro area to men, women, and children caught in the cycles of poverty, hopelessness and dependencies of many kinds, and to see their lives transformed to hope, joy, lasting productivity and eternal life through the power of Jesus Christ.</p>
+                            <a href="https://www.bowery.org/donate/form/?journitygroup=View+%24+Donor+Form&utm_source=goo
+gle&utm_medium=cpc&utm_campaign=MW_TBM_116-46647_2210bwamb_20231002_2210BWAMB&utm_content=nil_nil_nil_nil&s_src=2210BWAMB&s_subsrc=SEM&mwm_id=617058305677&mwsc=TBM-116-2210BWAMB&gclid=Cj0KCQjwkt6aBhDKARIsAAyeLJ3r9S1cFKQ-z-Xc2DAXnwABRwaUn3eCJnLms8BjoOEXo3YxYYLdDNcaAjuzEALw_wcB
+" class="btn btn-primary">Donate</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-body">
+                    <div class="card" style="width: 18rem;">
+                        <img src="img/coalition-for-homeless.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Coalition For The Homeless</h5>
+                            <p class="card-text">The Coalition for the Homeless values diversity, equity, and inclusion in every aspect of our work, including our internal operations and external activities to support our mission. We are committed to cultivating a culture of respect for the dignity and value of each individual and family, and we welcome all, regardless of race, ethnicity, gender identity or expression, sexual orientation, age, veteran status, national origin, disability, household composition, housing status and/or belief system. These values are essential to our mission to assist and advocate for those who are homeless or at risk of losing their homes, champion equity in all public and private responses to homelessness, and help individuals and families from all backgrounds secure vital services, safe indoor shelter, and decent permanent homes of their own.</p>
+                            <a href="https://www.coalitionforthehomeless.org/donate/" class="btn btn-primary">Donate</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-body">
+                    <div class="card" style="width: 18rem;">
+                        <img src="img/nyc-dept-of-homeless.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">NYC Department of Homeless Services</h5>
+                            <p class="card-text">A donation to the Homeless Trust Fund helps improve the quality of life for thousands of families currently experiencing homelessness. Your donations go directly to shelters, which use the funds to buy clothing, gifts, board games, and sports equipment. The fund also helps the Department of Homeless Services (DHS) sponsor special events, such as trips to amusement parks, the circus, and baseball games. Donations may be earmarked for specific shelters.</p>
+                            <a href="https://www1.nyc.gov/site/dhs/about/donations.page" class="btn btn-primary">Donate</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-body">
+                    <div class="card" style="width: 18rem;">
+                        <img src="img/catholic-charities.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Catholic Charities USA</h5>
+                            <p class="card-text">Catholic Charities USA was founded over a century ago by men and women who believed that the collective efforts of the church to faithfully serve people in need could change the course of poverty in our nation.At Catholic Charities we help people, regardless of their faith, who are struggling with poverty and other complex issues. At CCUSA, our advocacy and disaster relief programs — and our support of member agencies in our network — is making tangible progress toward providing help and hope to our neighbors across the country.Our collective efforts focus on a set of strategic priorities that make a difference in the lives of people in need.</p>
+                            <a href="https://lp.catholiccharities.us/reducingpoverty?gclid=Cj0KCQjwkt6aBhDKARIsAAyeLJ0pUxhuHIUA9fEE9B_KCae5K6Qx6Z_7AsPK2Sb9E-7CbWnr0MCa2EgaAl38EALw_wcB" class="btn btn-primary">Donate</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </main>
+
+
+    <!--<div>
+        <div class="card" style="width: 18rem;">
+            <img src="https://assets.bowery.org/og_images/Logo_Default-Share-small.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">The Bower Mission</h5>
+                <p class="card-text">The Bowery Mission is called to minister in the New York metro area to men, women, and children caught in the cycles of poverty, hopelessness and dependencies of many kinds, and to see their lives transformed to hope, joy, lasting productivity and eternal life through the power of Jesus Christ.</p>
+                <a href="https://www.bowery.org/donate/form/?journitygroup=View+%24+Donor+Form&utm_source=goo
+gle&utm_medium=cpc&utm_campaign=MW_TBM_116-46647_2210bwamb_20231002_2210BWAMB&utm_content=nil_nil_nil_nil&s_src=2210BWAMB&s_subsrc=SEM&mwm_id=617058305677&mwsc=TBM-116-2210BWAMB&gclid=Cj0KCQjwkt6aBhDKARIsAAyeLJ3r9S1cFKQ-z-Xc2DAXnwABRwaUn3eCJnLms8BjoOEXo3YxYYLdDNcaAjuzEALw_wcB
+" class="btn btn-primary">Donate</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="img/coalition-for-homeless.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Coalition For The Homeless</h5>
+                <p class="card-text">The Coalition for the Homeless values diversity, equity, and inclusion in every aspect of our work, including our internal operations and external activities to support our mission. We are committed to cultivating a culture of respect for the dignity and value of each individual and family, and we welcome all, regardless of race, ethnicity, gender identity or expression, sexual orientation, age, veteran status, national origin, disability, household composition, housing status and/or belief system. These values are essential to our mission to assist and advocate for those who are homeless or at risk of losing their homes, champion equity in all public and private responses to homelessness, and help individuals and families from all backgrounds secure vital services, safe indoor shelter, and decent permanent homes of their own.</p>
+                <a href="https://www.coalitionforthehomeless.org/donate/" class="btn btn-primary">Donate</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="img/nyc-dept-of-homeless.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">NYC Department of Homeless Services</h5>
+                <p class="card-text">A donation to the Homeless Trust Fund helps improve the quality of life for thousands of families currently experiencing homelessness. Your donations go directly to shelters, which use the funds to buy clothing, gifts, board games, and sports equipment. The fund also helps the Department of Homeless Services (DHS) sponsor special events, such as trips to amusement parks, the circus, and baseball games. Donations may be earmarked for specific shelters.</p>
+                <a href="https://www1.nyc.gov/site/dhs/about/donations.page" class="btn btn-primary">Donate</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="img/catholic-charities.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Catholic Charities USA</h5>
+                <p class="card-text">Catholic Charities USA was founded over a century ago by men and women who believed that the collective efforts of the church to faithfully serve people in need could change the course of poverty in our nation.At Catholic Charities we help people, regardless of their faith, who are struggling with poverty and other complex issues. At CCUSA, our advocacy and disaster relief programs — and our support of member agencies in our network — is making tangible progress toward providing help and hope to our neighbors across the country.Our collective efforts focus on a set of strategic priorities that make a difference in the lives of people in need.</p>
+                <a href="https://lp.catholiccharities.us/reducingpoverty?gclid=Cj0KCQjwkt6aBhDKARIsAAyeLJ0pUxhuHIUA9fEE9B_KCae5K6Qx6Z_7AsPK2Sb9E-7CbWnr0MCa2EgaAl38EALw_wcB" class="btn btn-primary">Donate</a>
+            </div>
+        </div>
+    </div>-->
+
+    <h1></h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 
 </html>
