--- a/stories.html
+++ b/stories.html
@@ -110,7 +110,7 @@
   </main>
 
   <footer>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3" class="naviii">
       <div class="container bottom">
         <a href="#" class="navbar-brand"> <img src=Logo_2.svg width="175" height"90" /></a>
       </div>
