--- a/stories.html
+++ b/stories.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="p-3 mb-2 bg-danger text-white">
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
     <div class="container">
       <a href="#" class="navbar-brand"> <img src=Logo_2.svg width="375" height"90" /></a>
@@ -35,7 +35,7 @@
 
   <main>
     <img src="Buffalo-image.jpg" class="img-fluid rounded mx-auto d-block buffalo"></img>
-    <article class="badge bg-primary text-wrap">
+    <article class="badge p-3 mb-2 bg-dark text-white text-wrap">
       <h3>Buffalo Shooting</h3>
       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
         sed diam nonummy nibh euismod tincidunt ut laoreet dolore
@@ -60,7 +60,7 @@
     </article>
     <br>
     <img src="Subway-shooting-ray.webp" class="img-thumbnail rounded mx-auto d-block"></img>
-    <article class="badge bg-primary text-wrap">
+    <article class="badge p-3 mb-2 bg-dark text-white text-wrap">
       <h3>New York Subway Shooting</h3>
       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
         sed diam nonummy nibh euismod tincidunt ut laoreet dolore
@@ -84,7 +84,7 @@
         in futurum.</p>
     </article>
     <img src="st-louis-school-2.jpg" class="img-thumbnail rounded mx-auto d-block"></img>
-    <article class="badge bg-primary text-wrap">
+    <article class="badge p-3 mb-2 bg-dark text-white text-wrap">
       <h3>St. Louis High School Shooting</h3>
       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
         sed diam nonummy nibh euismod tincidunt ut laoreet dolore
@@ -114,10 +114,21 @@
       <div class="container bottom">
         <a href="#" class="navbar-brand"> <img src=Logo_2.svg width="175" height"90" /></a>
         <div class="col">
-          One of three columns
+          <a href="home.html" class="nav-link text-white bg-dark">Hom</a>
+          <a href="stories.html" class="nav-link text-white bg-dark">Stories</a>
+          <a href="action.html" class="nav-link text-white bg-dark">Call To Action</a>
         </div>
         <div class="col">
-          One of three columns
+          <a href="#">privacy</a>
+          <a href="#">Terms</a>
+          <a href="#">Policy</a>
+        </div>
+        <div class="col text-white bg-dark">
+          Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+          sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+          magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+          quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+          ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
         </div>
       </div>
 
