--- a/action.html
+++ b/action.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a href="#home.html" class="nav-link">HOME</a>
+              <a href="home.html" class="nav-link">HOME</a>
             </li>
             <li class="nav-item">
               <a href="stories.html" class="nav-link">STORIES</a>
