added some padding

--- a/stories.html
+++ b/stories.html
@@ -113,12 +113,12 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3" class="naviii">
       <div class="container bottom ">
         <a href="#" class="navbar-brand "> <img src=Logo_2.svg width="175" height"90" /></a>
-        <div class="col">
+        <div class="col d-grid gap-3">
           <a href="home.html" class="nav-link text-white bg-dark">Home</a>
           <a href="stories.html" class="nav-link text-white bg-dark">Stories</a>
           <a href="action.html" class="nav-link text-white bg-dark">Call To Action</a>
         </div>
-        <div class="col">
+        <div class="col d-grid gap-3">
           <a href="#" class="nav-link text-white bg-dark">Privacy</a>
           <a href="#" class="nav-link text-white bg-dark">Terms</a>
           <a href="#" class="nav-link text-white bg-dark">Policy</a>
