--- a/additional.html
+++ b/additional.html
@@ -39,9 +39,9 @@
         <div class="side-bar">
           <h1> ARTICLE</h1>
           <div class="articles">
-            <a href="#">Article 1</a>
-            <a href="#">Article 2</a>
-            <a href="#">Article 3</a>
+            <a href=" Article 1">Article 1</a>
+            <a href="Article 2">Article 2</a>
+            <a href="Article 3">Article 3</a>
           </div>
         </div>
       </div>
