actually fixed navbar redirect to page 2

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -32,7 +32,7 @@
                             </li>
                             <li class="nav-item">
 
-                                <a class="nav-link href= ../statistics/statistics.html">Why Sex Ed?</a>
+                                <a class="nav-link" href="../statistics/statistics.html">Why Sex Ed?</a>
 
                             </li>
                             <li class="nav-item">
