--- a/additional.html
+++ b/additional.html
@@ -83,8 +83,20 @@
       </div>
       </section>
     </div>
-    <footer>
-      ODKFOKKFLGM
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <p class="col-md-4 mb-0 text-dark">© Variety Of Life .Inc</p>
+
+      <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+        <svg class="bi me-2" width="40" height="32">
+          <use xlink:href="#bootstrap"></use>
+        </svg>
+      </a>
+
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a href="landing-page.html" class="nav-link px-2 text-white">Home</a></li>
+        <li class="nav-item"><a href="gallery.html" class="nav-link px-2 text-white">Gallery</a></li>
+        <li class="nav-item"><a href="additional.html" class="nav-link px-2 text-white">About</a></li>
+      </ul>
     </footer>
 </body>
 
