finished content for stories and updated action page

--- a/home.html
+++ b/home.html
@@ -41,11 +41,11 @@
         <div>
           <h1>Stop Gun Violence</h1>
           <p class="lead my-4">
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
+            Donate to Everytown for Gun Safety if you want to help fight against gun violence!
           </p>
           <div class="buttons">
             <button class="btn btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#donate">
-              DONATE
+              <a href="">DONATE</a>
             </button>
           </div>
           <div class="behind-button"></div>
