--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -47,22 +47,25 @@
 
             <section class="lower-three container-fluid justify-content-center h-100 g-0">
                 <section class="row">
-                    <div class="col d-flex ">
+                    <div class="col ">
                         <h3> Reproductive Health Rights</h3>
-                        <p>Reproductive rights would be always be discussed in Comprehensive Sex-Ed. Without this learning, young women will not know what their choices are when they are pregnant. Although laws in some states have taken control over these rights for women in recent years, it is important to continuously advocate these rights that protect women and their bodies. These reproductive rights include access to birth control and safe/legal abortion care.
+                        <p> Reproductive rights would be always be discussed in Comprehensive Sex-Ed. Without this learning, young women will not know what their choices are when they are pregnant. Although laws in some states have taken control over these rights for women in recent years, it is important to continuously advocate these rights that protect women and their bodies. These reproductive rights include access to birth control and safe/legal abortion care.
+                        
+                        -include resources here 
 
                         </p>
                     </div>
                     <div class="col order-5">
                         <h3>Safe Sex</h3>
                         <p>- classes may teach that abstience is the right way to go
-                            -explain how sites that do not promote Sex-Ed are harmful
-                            -campaigns that do not promote sex-ed in schools are harmful
+                          Reproductive rights would be always be discussed in Comprehensive Sex-Ed. Without this learning, young women will not know what their choices are when they are pregnant. Although laws in some states have taken control over these rights for women in recent years, it is important to continuously advocate these rights that protect women and their bodies. These reproductive rights include access to birth control and safe/legal abortion care.
+
                         </p>
                     </div>
                     <div class="col order-1">
                         <h3>Sex-Ed Misinformation </h3>
-                        <p> -breifly mention methods on staying safe</p>
+                        <p> Reproductive rights would be always be discussed in Comprehensive Sex-Ed. Without this learning, young women will not know what their choices are when they are pregnant. Although laws in some states have taken control over these rights for women in recent years, it is important to continuously advocate these rights that protect women and their bodies. These reproductive rights include access to birth control and safe/legal abortion care.
+</p>
                     </div>
                     </div>
                 </section>
