changes made to nav bar

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -18,7 +18,7 @@
 
         <header>
 
-            <nav class="navbar navbar-expand-lg navbar-dark">
+            <nav class="navbar navbar-expand-lg navbar-dark mx-auto">
                 <div class="container-fluid">
                     <i class="fa-solid fa-dove dove"></i>
                     <a class="navbar-brand" href="#"="true">Comprehensive Sex Education</a>
@@ -32,7 +32,7 @@
                             </li>
                             <li class="nav-item">
 
-                                <a class="nav-link href=" ../statistics/statistics.html>Why Sex Ed?</a>
+                                <a class="nav-link" href="../statistics/statistics.html">Why Sex Ed?</a>
 
                             </li>
                             <li class="nav-item">
@@ -43,7 +43,7 @@
                 </div>
             </nav>
         </header>
-        <main class="container">
+        <main class="container-fluid mx-auto">
             <section class="row title">
                 <div class="col-12 text-center">
                     <h1>Comprehensive Sex Education</h1>
@@ -104,7 +104,7 @@
 
         </main>
         
-        <footer class='row footer'>
+        <footer class='row footer mx-auto'>
             <div class=col-6> <i class="fa-solid fa-dove fa-2x dove-bottom"></i> </div>
             <div class="col-6 footer-contact">
                 <h6>Comprehensive Sex Education</h6>
