ayiaz is a pain in my ass - gonzalo

--- a/donations.html
+++ b/donations.html
@@ -7,11 +7,31 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="don.css" type="text/css" />
+    <link rel="stylesheet" href="landingpage3" type="text/css" />
+    
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href=home>HELP HOMELESS NYC</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="#">Home </a>
+                    <a class="nav-link" href=shelters.html> Need Help</a>
+                    <a class="nav-link" href="#">Get Involved</a>
+                    <a class="nav-link disabled"> About Us</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+
     <div class="container-fluid py-2 scrolling-wrapper">
-        <h2 class="font-weight-light">Donate to Charity</h2>
+        <h1 class="font-weight-light">Donate to Charity</h1>
         <div class="d-flex flex-row flex-nowrap">
             <div class="card card-body">
                 <img src="img/coalition-for-homeless.png"></img>
@@ -46,33 +66,37 @@ gle&utm_medium=cpc&utm_campaign=MW_TBM_116-46647_2210bwamb_20231002_2210BWAMB&ut
         </div>
     </div>
     <div class="container-fluid py-2">
-        <h2 class="font-weight-light">Places to Volunteer</h2>
+        <h1 class="font-weight-light">Places to Volunteer</h1>
         <div class="d-flex flex-row flex-nowrap scrolling-wrapper">
             <div class="card card-body2">
 
-                <h4>Coalition of the homeless</h4>
+                <h4>Coalition for the homeless</h4>
+                <img src="img/coalition-for-homeless.png"></img>
                 <p>The Coalition greatly appreciates your interest in volunteering and helping homeless New Yorkers. In an effort to maintain social distancing and prevent spread of the virus, we have limited our volunteer opportunities.One great way to get involved is through our Grand Central Food Program. We are scheduling a limited number of volunteers to join us at St. Bartholomew’s Church from 4:30pm until 6:30pm Monday through Friday.The Grand Central Food Program is also looking for weekend volunteer drivers from 6:45pm until roughly 9:30pm. The route begins and ends at St. Bartholomew’s Church on 51st Street. This opportunity requires that you commit to joining us consistently.</p>
-                <a class="btn btn-primary btn2" href="https://www.coalitionforthehomeless.org/volunteer/" role="button">Click to Volunteer</a>
+                <a class="btn btn-primary " href="https://www.coalitionforthehomeless.org/volunteer/" role="button">Click to Volunteer</a>
             </div>
             <div class="card card-body2">
+                <img src="img/neighborhood-shelter2.jpeg"></img>
                 <h4>Neighborhood Coalition For shelter</h4>
                 <p>NCS was founded on the premise that homelessness is the responsibility of the entire community. More than 35 years later, we are still guided by the principle that neighbors should help neighbors. This is why volunteerism has always been important to the work we do.
                     We love when volunteers come to NCS to spend time with our residents, help us in the office, or share their unique skills.</p>
-                <a class="btn btn-primary " href="https://www.ncsinc.org/volunteer" role="button">Click to Volunteer</a>
+                <a class="btn btn-primary" href="https://www.ncsinc.org/volunteer" role="button">Click to Volunteer</a>
 
             </div>
             <div class="card card-body2">
 
                 <h4>HFH</h4>
+                <img src="img/HFH-logo.jpeg"></img>
                 <p>We are able to enrich our programming and the cultural experiences of the children and adults we serve through our volunteers and partners. Volunteers come from all ages and backgrounds and are always welcome to share their time and talent with our community through a variety of available projects, events, and partnership opportunities. Previous volunteer activities have included recreational outings such as ice skating and watching a professional baseball game, as well as practical in-house workshops on financial literacy and healthy eating.
                     HFH is always seeking energetic people with experience in the arts, sciences, mathematics, and/or literacy to organize volunteer events.</p>
-                <a class="btn btn-primary btn2" href="https://www.hfhnyc.org/get-involved/volunteer" role="button">Click to Volunteer</a>
+                <a class="btn btn-primary " href="https://www.hfhnyc.org/get-involved/volunteer" role="button">Click to Volunteer</a>
 
             </div>
             <div class="card card-body2">
+                <img src="img/bowery image.png"></img>
                 <h4>The Bowery Mission</h4>
                 <p>Join us in our work to empower others! Without friends like you, The Bowery Mission simply could not meet the needs of people experiencing homelessness and hunger in the New York metro area. Serve a meal, tutor and mentor clients, offer a special or professional skill. You can make an impact in someone's life today.</p>
-                <a class="btn btn-primary btn2" href="https://www.bowery.org/volunteer/" role="button">Click to Volunteer</a>
+                <a class="btn btn-primary " href="https://www.bowery.org/volunteer/" role="button">Click to Volunteer</a>
 
             </div>
 
