--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
   </nav>
   <div class="container text-center">
     <div class="row">
-      <div class="col-sm-6 col-md-4">
+      <div class="col-sm-6 col-md-4-">
         <img class="gallery-photos" src="https://cdn.britannica.com/70/161670-050-8E5BCC80/Red-eyed-tree-frog.jpg?w=600&q=60">
       </div>
       <div class="col-sm-6 col-md-4 ">
