added another section to home.html

--- a/home.html
+++ b/home.html
@@ -94,6 +94,42 @@
       </span>
     </section>
   </section>
+  
+    <section class="chart">
+      <h1 class="red-text">
+        COMMON CAUSES OF GUN VIOLENCE
+      </h1>
+      <span>
+      <img src="Pie_Chart-01.svg" class="piechart">
+       <span class="chartheading">
+        <h3 class="red-text">STOP GUN VIOLENCE<h3>
+        <p class="red-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+        sed diam nonummy nibh euismod.</p>
+      </span>
+      <span class="bulletpoints">
+        <img src="Bullet-01.svg" class="bullet">
+        <p class="red-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+        magna aliquam erat volutpat.</p>
+      </span>
+       </span>
+      <span class="bulletpoints">
+        <img src="Bullet-01.svg" class="bullet">
+        <p class="red-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+        magna aliquam erat volutpat.</p>
+      </span>
+       </span>
+      <span class="bulletpoints">
+        <img src="Bullet-01.svg" class="bullet">
+        <p class="red-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+        magna aliquam erat volutpat.</p>
+      </span>
+      
+        <span>
+    
+    </section>
 
   <footer>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3" class="naviii">
